Added health checks for all container services. Added health API endpoints for the frontend and backend
